fixed html problems

--- a/SecAFall16.tex
+++ b/SecAFall16.tex
@@ -50,7 +50,7 @@
 
 \title{Information Organization and Access}
 \author{University of Illinois School of Information Sciences}
-\date{Sun, Aug 14, 2016 1:33:01 PM}
+\date{Sat, Aug 20, 2016 11:04:27 AM}
 
 \begin{document}
 \maketitle
@@ -62,10 +62,10 @@ Thursday 1:00-3:50pm Room 46\\
 4 credit hours
 
 Instructor: Jodi Schneider\\
-Email: jschne23@illinois.edu\\
+Email: jodi@illinois.edu\\
 Office: LIS 334\\
 Office Hour: TBA\\
-Phone: TBD
+Phone: (217) 300-4328
 
 Instructor: Maria Bonn\\
 Email: mbonn@illinois.edu\\
@@ -210,7 +210,7 @@ public policy development.
 
 \url{http://www.library.illinois.edu/lsx/}\\
 lislib@library.illinois.edu\\
-Phone: 217-333-3804
+Phone: (217) 333-3804
 
 \section{Writing Resources}\label{writing-resources}
 
@@ -256,7 +256,200 @@ To obtain accessibility-related academic adjustments and/or auxiliary
 aids, students with disabilities must contact the course instructor and
 the Disability Resources and Educational Services (DRES) as soon as
 possible. To contact DRES you may visit 1207 S. Oak St., Champaign, call
-333-4603 (V/TTY), or e-mail a message to disability@uiuc.edu.
+(217) 333-4603 (V/TTY), or e-mail a message to disability@uiuc.edu.
+
+\section{Topic Schedule}\label{topic-schedule}
+
+Week 1, August 23: LIS Education and professional life
+
+\begin{itemize}
+\tightlist
+\item
+  Background: (Glushko
+  \protect\hyperlink{ref-glushkoux5ffoundationux5f2015}{2015}\protect\hyperlink{ref-glushkoux5ffoundationux5f2015}{c}),
+  (Wright
+  \protect\hyperlink{ref-wrightux5fsecretux5f2014}{2014}\protect\hyperlink{ref-wrightux5fsecretux5f2014}{b}),
+  (Wright
+  \protect\hyperlink{ref-wrightux5fcatalogingux5f2014}{2014}\protect\hyperlink{ref-wrightux5fcatalogingux5f2014}{a}),
+  (Levie and Sofidoc Productions.
+  \protect\hyperlink{ref-levieux5fmanux5f2004}{2004}).
+\item
+  Required: (Ferraris
+  \protect\hyperlink{ref-ferrarisux5fsocialux5f2011}{2011}), (Lavoie,
+  Dempsey, and Connaway
+  \protect\hyperlink{ref-lavoieux5fmakingux5f2006}{2006}), (Dyson
+  \protect\hyperlink{ref-dysonux5fhowux5f2011}{2011}), (Bush
+  \protect\hyperlink{ref-bushux5fasux5f1945}{1945}), (Buckland
+  \protect\hyperlink{ref-bucklandux5fwhatux5f1997}{1997}), (Bates
+  \protect\hyperlink{ref-batesux5finvisibleux5f1999}{1999}).
+\end{itemize}
+
+Week 2, August 30: Users and information needs
+
+\begin{itemize}
+\tightlist
+\item
+  Background: (Glushko
+  \protect\hyperlink{ref-glushkoux5finteractionsux5f2015}{2015}\protect\hyperlink{ref-glushkoux5finteractionsux5f2015}{d}),
+  (Naumer and Fisher
+  \protect\hyperlink{ref-naumerux5finformationux5f2009}{2009}), (Wilson
+  \protect\hyperlink{ref-wilsonux5finformationux5f2008}{2008}), (Miksa
+  \protect\hyperlink{ref-miksaux5finformationux5f2009}{2009}), (Foss et
+  al. \protect\hyperlink{ref-fossux5fchildrensux5f2012}{2012}), (Hyder
+  \protect\hyperlink{ref-hyderux5freadingux5f2014}{2014}), (Johnson
+  \protect\hyperlink{ref-johnsonux5fhealth-relatedux5f2014}{2014}),
+  (Connaway and Faniel
+  \protect\hyperlink{ref-connawayux5freorderingux5f2014}{2014}), (Bates
+  \protect\hyperlink{ref-batesux5finformationux5f2009}{2009}), (Connaway
+  and Powell
+  \protect\hyperlink{ref-connawayux5fselectingux5f2010}{2010}\protect\hyperlink{ref-connawayux5fselectingux5f2010}{b}).
+\item
+  Required: (Connaway, Dickey, and Radford
+  \protect\hyperlink{ref-connawayux5fifux5f2011}{2011}), (Blair
+  \protect\hyperlink{ref-blairux5freadingux5f2003}{2003}), (Bawden and
+  Robinson \protect\hyperlink{ref-bawdenux5fdarkux5f2009}{2009}).
+\end{itemize}
+
+Week 3, September 6: Research Methods
+
+\begin{itemize}
+\tightlist
+\item
+  Background: (Connaway and Powell
+  \protect\hyperlink{ref-connawayux5fbasicux5f2010}{2010}\protect\hyperlink{ref-connawayux5fbasicux5f2010}{a}),
+  (Walliman \protect\hyperlink{ref-wallimanux5fdefiningux5f2006}{2006}),
+  (Fidel \protect\hyperlink{ref-fidelux5fareux5f2008}{2008}), (Sutton
+  \protect\hyperlink{ref-suttonux5fqualitativeux5f2009}{2009}),
+  (Sandstrom and Sandstrom
+  \protect\hyperlink{ref-sandstromux5fuseux5f1995}{1995}), (Connaway and
+  Powell
+  \protect\hyperlink{ref-connawayux5fselectingux5f2010}{2010}\protect\hyperlink{ref-connawayux5fselectingux5f2010}{b}).
+\item
+  Required: (Aufderheide
+  \protect\hyperlink{ref-aufderheideux5fdoesux5f2016}{2016}), (Shachaf
+  and Horowitz \protect\hyperlink{ref-shachafux5fareux5f2006}{2006}),
+  (Whitmire \protect\hyperlink{ref-whitmireux5fracialux5f1999}{1999}).
+\end{itemize}
+
+Week 4, September 13: Structures and Standards
+
+\begin{itemize}
+\tightlist
+\item
+  Background: (Glushko
+  \protect\hyperlink{ref-glushkoux5fdescribingux5f2015}{2015}\protect\hyperlink{ref-glushkoux5fdescribingux5f2015}{b}),
+  (Bettels and Bishop
+  \protect\hyperlink{ref-bettelsux5funicode:ux5f1993}{1993}).
+\item
+  Required: (Vogt
+  \protect\hyperlink{ref-vogtux5fescienceux5f2013}{2013}), (DeRose
+  \protect\hyperlink{ref-deroseux5fwhatux5f2014}{2014}), (Coombs,
+  Renear, and DeRose
+  \protect\hyperlink{ref-coombsux5fmarkupux5f1987}{1987}).
+\end{itemize}
+
+Week 5, September 20: Approaches to organizing information
+
+\begin{itemize}
+\tightlist
+\item
+  Background: (Glushko
+  \protect\hyperlink{ref-glushkoux5fresourcesux5f2015}{2015}\protect\hyperlink{ref-glushkoux5fresourcesux5f2015}{e}).
+\item
+  Required: (Kennedy
+  \protect\hyperlink{ref-kennedyux5fnineux5f2008}{2008}), (Maxwell
+  \protect\hyperlink{ref-maxwellux5fbibliographicux5f2010}{2010}),
+  (Warren \protect\hyperlink{ref-warrenux5f2015ux5f2015}{2015}), (Swoger
+  \protect\hyperlink{ref-swogerux5fwhatux5f2012}{2012}), (Olson
+  \protect\hyperlink{ref-olsonux5fpowerux5f2001}{2001}).
+\end{itemize}
+
+Week 6, September 27: Collections
+
+\begin{itemize}
+\tightlist
+\item
+  Background: (Junus
+  \protect\hyperlink{ref-junusux5fdigitalux5f2014}{2014}), (Glushko
+  \protect\hyperlink{ref-glushkoux5factivitiesux5f2015}{2015}\protect\hyperlink{ref-glushkoux5factivitiesux5f2015}{a}).
+\item
+  Required: (Hadro
+  \protect\hyperlink{ref-hadroux5fwhatsux5f2013}{2013}), (``Update on
+  the Twitter Archive at the Library of Congress.''
+  \protect\hyperlink{ref-ux5fupdateux5f2013}{2013}), (Hunter and
+  Oehlerts \protect\hyperlink{ref-hunterux5ftwoux5f1981}{1981}), (Lewis
+  \protect\hyperlink{ref-lewisux5fstacksux5f2013}{2013}).
+\end{itemize}
+
+Week 7, October 4: Preservation
+
+\begin{itemize}
+\tightlist
+\item
+  Background: (Glushko
+  \protect\hyperlink{ref-glushkoux5forganizingux5f2015}{2015}\protect\hyperlink{ref-glushkoux5forganizingux5f2015}{f}).
+\item
+  Required: (Shilton and Srinivasan
+  \protect\hyperlink{ref-shiltonux5fparticipatoryux5f2007}{2007}),
+  (Teper \protect\hyperlink{ref-teperux5fselectionux5f2014}{2014}).
+\end{itemize}
+
+Week 8, October 11: Search and discovery
+
+\begin{itemize}
+\tightlist
+\item
+  Background: (Gossen and Nürnberger
+  \protect\hyperlink{ref-gossenux5fspecificsux5f2013}{2013}), (Hearst
+  \protect\hyperlink{ref-hearstux5fevaluationux5f2009}{2009}), (Duffy
+  \protect\hyperlink{ref-duffyux5fsearchingux5f2013}{2013}), (Bates
+  \protect\hyperlink{ref-batesux5fwhatux5f2007}{2007}).
+\item
+  Required: (Saarinen and Vakkari
+  \protect\hyperlink{ref-saarinenux5fsignux5f2013}{2013}), (Bawden
+  \protect\hyperlink{ref-bawdenux5fencounteringux5f2011}{2011}), (Barton
+  and Mak \protect\hyperlink{ref-bartonux5foldux5f2012}{2012}), (Adkins
+  and Bossaller
+  \protect\hyperlink{ref-adkinsux5ffictionux5f2007}{2007}).
+\end{itemize}
+
+Week 9, October 18: Evaluation of systems and services
+
+\begin{itemize}
+\tightlist
+\item
+  Background: (Fuhr et al.
+  \protect\hyperlink{ref-fuhrux5fevaluationux5f2007}{2007}), (Voorhees
+  \protect\hyperlink{ref-petersux5fphilosophyux5f2002}{2002}).
+\item
+  Required: (Nitecki
+  \protect\hyperlink{ref-niteckiux5fchangingux5f1996}{1996}), (Asher,
+  Duke, and Wilson
+  \protect\hyperlink{ref-asherux5fpathsux5f2013}{2013}).
+\end{itemize}
+
+Week 10, October 25: Subject analysis and subject languages
+
+\begin{itemize}
+\tightlist
+\item
+  Background: (Kreyche
+  \protect\hyperlink{ref-kreycheux5fsubjectux5f2013}{2013}), (Mitchell
+  and Vizine-Goetz
+  \protect\hyperlink{ref-mitchellux5fdeweyux5f2009}{2009}), (Chan and
+  Hodges \protect\hyperlink{ref-chanux5flibraryux5f2009}{2009}),
+  (Anderson and Pérez-Carballo
+  \protect\hyperlink{ref-andersonux5flibraryux5f2009}{2009}), (Beghtol
+  \protect\hyperlink{ref-beghtolux5fclassificationux5f2009}{2009}).
+\item
+  Required: (Lee
+  \protect\hyperlink{ref-leeux5findigenousux5f2011}{2011}), (Higgins
+  \protect\hyperlink{ref-higginsux5flibraryux5f2012}{2012}), (Fister
+  \protect\hyperlink{ref-fisterux5fdeweyux5f2009}{2009}), (Buckland
+  \protect\hyperlink{ref-bucklandux5fobsolescenceux5f2012}{2012}),
+  (Brown-Sica and Beall
+  \protect\hyperlink{ref-brown-sicaux5flibraryux5f2008}{2008}).
+\end{itemize}
 
 \section{Assignments and Evaluation}\label{assignments-and-evaluation}
 
@@ -269,23 +462,22 @@ emergencies, as soon as practicable). There will be three main
 assignments, and ten labs. The weighting of each assignment in the final
 grade is noted below.
 
-Assignments, Exercises \& Grade Distribution:
+\textbf{Assignments, Exercises \& Grade Distribution:}
 
 \begin{itemize}
 \tightlist
 \item
   Assignment 1: Information Needs/Information Seeking Behavior. Due
-  September due date at 11:59 PM (20\%).
+  September 1 (20\%).
 \item
-  Assignment 2: Digital Collections Assessment. Due October due date at
-  11:59 PM (20\%).
+  Assignment 2: Digital Collections Assessment. Due September 29 (20\%).
 \item
-  Assignment 3: Final Project. Due October due date at 11:59 PM (40\%).
+  Assignment 3: Final Project. Due October 27 (40\%).
 \item
   10 Labs for Attendance and Completion/Class Participation (20\%)
 \end{itemize}
 
-Labs:
+\textbf{Labs:}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -312,7 +504,7 @@ Labs:
   Poster presentations (October 27)
 \end{enumerate}
 
-Grading Scale:
+\textbf{Grading Scale:}
 
 94-100 = A\\
 90-93 = A-\\
@@ -330,7 +522,7 @@ Grading Scale:
 \section{Assignment 1 Information Needs/Information Seeking
 Behavior}\label{Asgt1}
 
-Due September due date at 11:59 PM. This assignment is worth 20 points.
+Due September 1. This assignment is worth 20 points.
 
 \subsection{Rationale}\label{rationale}
 
@@ -464,7 +656,7 @@ Pick one DPLA exhibition, or one Flickr gallery or one Europeana
 pinterest board as an exemplar for your analysis. write a narrative
 assessment of the content, organization, and potential users and uses.
 
-Due October due date at 11:59 PM. This assignment is worth 20 points.
+Due September 29. This assignment is worth 20 points.
 
 \subsection{Before you begin}\label{before-you-begin}
 
@@ -497,7 +689,7 @@ issues will become more vivid and understandable to you.
   \item
     \href{http://dp.la/exhibitions}{DPLA exhibitions} (28 exhibitions)
   \item
-    \href{https://www.flickr.com/photos/flickr/galleries}{FLICKR
+    \href{https://www.flickr.com/photos/flickr/galleries}{Flickr
     galleries} (there are 322)
   \item
     \href{https://www.pinterest.com/europeana/}{Europeana Pinterest
@@ -599,192 +791,160 @@ These resources may be useful for completing this assignment.
   \end{itemize}
 \end{itemize}
 
-\section{Topic Schedule}\label{topic-schedule}
+\section{Assignment 3: Research Design Proposal}\label{Asgt3}
 
-Week 1, August 23: LIS Education and professional life
+\subsection{Rationale}\label{rationale-2}
+
+This aim of this assignment is to acquaint you with the rudiments of
+research design, and invite you to think about a topic you might
+investigate yourself, following up on the work in this class. This is
+part of your education because:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Librarians, archivists, and other professionals in our discipline
+  conduct and publish both academic research and institutional
+  evaluation studies.
+\item
+  Understanding the aims and practices of academic and applied research
+  is necessary for working in partnership with and in support of
+  researchers in the communities that we serve.
+\item
+  Proposing an investigation of your own will sensitize you to design
+  issues in published research that you read in this and other LIS
+  classes.
+\item
+  According to ALA's Core Competences of Librarianship, ``A person
+  graduating from an ALA-accredited master's program in library and
+  information studies should know and, where appropriate, be able to
+  employ: \ldots{} A. The fundamentals of quantitative and qualitative
+  research methods. B. The central research findings and research
+  literature of the field. C. The principles and methods used to assess
+  the actual and potential value of new research.''
+\end{enumerate}
+
+\subsection{Before you begin}\label{before-you-begin-1}
 
 \begin{itemize}
 \tightlist
 \item
-  Background: (Glushko
-  \protect\hyperlink{ref-glushkoux5ffoundationux5f2015}{2015}\protect\hyperlink{ref-glushkoux5ffoundationux5f2015}{c}),
-  (Wright
-  \protect\hyperlink{ref-wrightux5fsecretux5f2014}{2014}\protect\hyperlink{ref-wrightux5fsecretux5f2014}{b}),
-  (Wright
-  \protect\hyperlink{ref-wrightux5fcatalogingux5f2014}{2014}\protect\hyperlink{ref-wrightux5fcatalogingux5f2014}{a}),
-  (Levie and Sofidoc Productions.
-  \protect\hyperlink{ref-levieux5fmanux5f2004}{2004}).
+  Think about any problems that interest you. How could they be
+  formulated as research questions?
 \item
-  Required: (Ferraris
-  \protect\hyperlink{ref-ferrarisux5fsocialux5f2011}{2011}), (Lavoie,
-  Dempsey, and Connaway
-  \protect\hyperlink{ref-lavoieux5fmakingux5f2006}{2006}), (Dyson
-  \protect\hyperlink{ref-dysonux5fhowux5f2011}{2011}), (Bush
-  \protect\hyperlink{ref-bushux5fasux5f1945}{1945}), (Buckland
-  \protect\hyperlink{ref-bucklandux5fwhatux5f1997}{1997}), (Bates
-  \protect\hyperlink{ref-batesux5finvisibleux5f1999}{1999}).
+  During the first four weeks of class, review the literature related to
+  open questions in a part of our discipline that interests you.
+\item
+  Complete the research methods exercise during our Week 3 lab session.
+\item
+  As background for Zotero, complete the September 29 Zotero exercise.
+\item
+  As background for the annotated bibliography, review the Purdue
+  University resources on annotated bibliographies here:
+  \url{https://owl.english.purdue.edu/owl/resource/614/01/} .
 \end{itemize}
 
-Week 2, August 30: Users and information needs
+\subsection{Milestone Deliverables}\label{milestone-deliverables}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Research Question due September 8, to be posted to the class
+  discussion forum designated by your instructor
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Pose a research question. Your post should be a sentence or two (no
+    more than a paragraph). Also provide feedback and suggestions to
+    your classmates by replying to their posts.
+  \end{itemize}
+\item
+  Research Methods due September 22, to be posted to the class
+  discussion forum designated by your instructor
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Devise methods for addressing your research question and write a one
+    paragraph description of an approach that you feel would be
+    appropriate for investigating the question. Draw on and connect this
+    to research methods discussed in class. Post no more than two
+    paragraphs (research question paragraph, revised from LABDATE3 + new
+    paragraph on research methods). Also provide feedback and
+    suggestions to your classmates by replying to their posts.
+  \end{itemize}
+\item
+  Resource List due October 6, to the class discussion forum designated
+  by your instructor
+
+  \begin{itemize}
+  \tightlist
+  \item
+    Use Zotero to share 20 resources related to your research question
+    and/or method. Your post should include a link to Zotero's RSS feed
+    for the collection and 1-2 sentences. This could cover either how
+    you found resources, types of items you are still looking for, or a
+    very brief commentary about a resource you found interesting. Also
+    provide feedback and suggestions to your classmates by replying to
+    their posts.
+  \end{itemize}
+\end{enumerate}
+
+\subsection{Final Deliverables}\label{final-deliverables}
+
+\begin{description}
+\tightlist
+\item[Due October 27 Two page extended abstract]
+Develop the two paragraph summary of your research question into a two
+page extended abstract. Focus on describing and justifying the methods
+for investigating your research question. The extended abstract is a
+proposal. It should include a statement of your research problem, a
+description of research methods for investigating the problem, and an
+explanation of what form the results of the investigation will take.
+\item[Due October 27 Annotated bibliography of 20 items]
+Following the Purdue Writing Lab Guidelines, create a document that
+integrates annotations with formatted entries. For each resource, write
+an annotation that situates the work presented with respect to your
+research question. Overall, the annotated bibliography should connect
+your problem to what is already known. It should have a meaningful order
+(which might be alphabetical, chronological, or something else). The
+resource list previously submitted may need to be modified, either
+removing or adding items as necessary to cover as many aspects of the
+problem, and the knowledge gap, as feasible. Your annotations should
+draw your reader's attention to the connections between the resource and
+your problem, and to other resources in the bibliography.
+\item[Due October 27 Five minute oral presentation]
+Use this presentation to efficiently summarize the relevance of this
+problem to people and organizations who have a stake in resolving the
+knowledge gap that you have identified. Do explain the general approach
+to investigating the question, but save methodological details for the
+extended abstract. Five minute summaries are difficult, so practice your
+presentation with a classmate or colleague outside class.
+\end{description}
+
+\subsubsection{Submitting Final
+Deliverables}\label{submitting-final-deliverables}
+
+Upload the extended abstract and annotated bibliography files to the
+Moodle drop box associated with this exercise.
+
+Present your project during one of the last two class meetings.
+
+\subsection{Resources}\label{resources-1}
 
 \begin{itemize}
 \tightlist
 \item
-  Background: (Glushko
-  \protect\hyperlink{ref-glushkoux5finteractionsux5f2015}{2015}\protect\hyperlink{ref-glushkoux5finteractionsux5f2015}{d}),
-  (Naumer and Fisher
-  \protect\hyperlink{ref-naumerux5finformationux5f2009}{2009}), (Wilson
-  \protect\hyperlink{ref-wilsonux5finformationux5f2008}{2008}), (Miksa
-  \protect\hyperlink{ref-miksaux5finformationux5f2009}{2009}), (Foss et
-  al. \protect\hyperlink{ref-fossux5fchildrensux5f2012}{2012}), (Hyder
-  \protect\hyperlink{ref-hyderux5freadingux5f2014}{2014}), (David
-  Johnson
-  \protect\hyperlink{ref-davidux5fjohnsonux5fhealth-relatedux5f2014}{2014}),
-  (Connaway and Faniel
-  \protect\hyperlink{ref-connawayux5freorderingux5f2014}{2014}), (Marcia
-  J. Bates
-  \protect\hyperlink{ref-marciaux5fj.ux5fbatesux5finformationux5f2009}{2009}),
-  (Connaway and Powell
-  \protect\hyperlink{ref-connawayux5fselectingux5f2010}{2010}).
+  \href{http://methods.sagepub.com/book/social-research-methods/n6.xml}{Walliman
+  on defining the research problem}
 \item
-  Required: (Connaway, Dickey, and Radford
-  \protect\hyperlink{ref-connawayux5fifux5f2011}{2011}), (Blair
-  \protect\hyperlink{ref-blairux5freadingux5f2003}{2003}), (Bawden and
-  Robinson \protect\hyperlink{ref-bawdenux5fdarkux5f2009}{2009}).
-\end{itemize}
-
-Week 3, September 6: Research Methods
-
-\begin{itemize}
-\tightlist
+  \href{https://owl.english.purdue.edu/owl/resource/614/01/}{Purdue
+  University resources on annotated bibliographies}
 \item
-  Background: (Fidel
-  \protect\hyperlink{ref-fidelux5fareux5f2008}{2008}), (Brett Sutton
-  \protect\hyperlink{ref-brettux5fsuttonux5fqualitativeux5f2009}{2009}),
-  (Sandstrom and Sandstrom
-  \protect\hyperlink{ref-sandstromux5fuseux5f1995}{1995}), (Connaway and
-  Powell \protect\hyperlink{ref-connawayux5fselectingux5f2010}{2010}).
-\item
-  Required: (Shachaf and Horowitz
-  \protect\hyperlink{ref-shachafux5fareux5f2006}{2006}), (Whitmire
-  \protect\hyperlink{ref-whitmireux5fracialux5f1999}{1999}).
-\end{itemize}
-
-Week 4, September 13: Structures and Standards
-
-\begin{itemize}
-\tightlist
-\item
-  Background: (Glushko
-  \protect\hyperlink{ref-glushkoux5fdescribingux5f2015}{2015}\protect\hyperlink{ref-glushkoux5fdescribingux5f2015}{b}),
-  (Bettels and Bishop
-  \protect\hyperlink{ref-bettelsux5funicode:ux5f1993}{1993}).
-\item
-  Required: (Vogt
-  \protect\hyperlink{ref-vogtux5fescienceux5f2013}{2013}), (DeRose
-  \protect\hyperlink{ref-deroseux5fwhatux5f2014}{2014}), (Coombs,
-  Renear, and DeRose
-  \protect\hyperlink{ref-coombsux5fmarkupux5f1987}{1987}).
-\end{itemize}
-
-Week 5, September 20: Approaches to organizing information
-
-\begin{itemize}
-\tightlist
-\item
-  Background: (Glushko
-  \protect\hyperlink{ref-glushkoux5fresourcesux5f2015}{2015}\protect\hyperlink{ref-glushkoux5fresourcesux5f2015}{e}).
-\item
-  Required: (Kennedy
-  \protect\hyperlink{ref-kennedyux5fnineux5f2008}{2008}), (Maxwell
-  \protect\hyperlink{ref-maxwellux5fbibliographicux5f2010}{2010}),
-  (Warren \protect\hyperlink{ref-warrenux5f2015ux5f2015}{2015}), (Swoger
-  \protect\hyperlink{ref-swogerux5fwhatux5f2012}{2012}), (Olson
-  \protect\hyperlink{ref-olsonux5fpowerux5f2001}{2001}).
-\end{itemize}
-
-Week 6, September 27: Collections
-
-\begin{itemize}
-\tightlist
-\item
-  Background: (Junus
-  \protect\hyperlink{ref-junusux5fdigitalux5f2014}{2014}), (Glushko
-  \protect\hyperlink{ref-glushkoux5factivitiesux5f2015}{2015}\protect\hyperlink{ref-glushkoux5factivitiesux5f2015}{a}).
-\item
-  Required: (Hadro
-  \protect\hyperlink{ref-hadroux5fwhatsux5f2013}{2013}), (``Update on
-  the Twitter Archive at the Library of Congress.''
-  \protect\hyperlink{ref-ux5fupdateux5f2013}{2013}), (Hunter and
-  Oehlerts \protect\hyperlink{ref-hunterux5ftwoux5f1981}{1981}), (Lewis
-  \protect\hyperlink{ref-lewisux5fstacksux5f2013}{2013}).
-\end{itemize}
-
-Week 7, October 4: Preservation
-
-\begin{itemize}
-\tightlist
-\item
-  Background: (Glushko
-  \protect\hyperlink{ref-glushkoux5forganizingux5f2015}{2015}\protect\hyperlink{ref-glushkoux5forganizingux5f2015}{f}).
-\item
-  Required: (Shilton and Srinivasan
-  \protect\hyperlink{ref-shiltonux5fparticipatoryux5f2007}{2007}),
-  (Teper \protect\hyperlink{ref-teperux5fselectionux5f2014}{2014}).
-\end{itemize}
-
-Week 8, October 11: Search and discovery
-
-\begin{itemize}
-\tightlist
-\item
-  Background: (Gossen and Nürnberger
-  \protect\hyperlink{ref-gossenux5fspecificsux5f2013}{2013}), (Hearst
-  \protect\hyperlink{ref-hearstux5fevaluationux5f2009}{2009}), (Duffy
-  \protect\hyperlink{ref-duffyux5fsearchingux5f2013}{2013}), (Bates
-  \protect\hyperlink{ref-batesux5fwhatux5f2007}{2007}).
-\item
-  Required: (Saarinen and Vakkari
-  \protect\hyperlink{ref-saarinenux5fsignux5f2013}{2013}), (Bawden
-  \protect\hyperlink{ref-bawdenux5fencounteringux5f2011}{2011}), (Barton
-  and Mak \protect\hyperlink{ref-bartonux5foldux5f2012}{2012}), (Adkins
-  and Bossaller
-  \protect\hyperlink{ref-adkinsux5ffictionux5f2007}{2007}).
-\end{itemize}
-
-Week 9, October 18: Evaluation of systems and services
-
-\begin{itemize}
-\tightlist
-\item
-  Background.
-\item
-  Required: (Asher, Duke, and Wilson
-  \protect\hyperlink{ref-asherux5fpathsux5f2013}{2013}), (Voorhees
-  \protect\hyperlink{ref-petersux5fphilosophyux5f2002}{2002}).
-\end{itemize}
-
-Week 10, October 25: Subject analysis and subject languages
-
-\begin{itemize}
-\tightlist
-\item
-  Background: (Kreyche
-  \protect\hyperlink{ref-kreycheux5fsubjectux5f2013}{2013}), (Mitchell
-  and Vizine-Goetz
-  \protect\hyperlink{ref-mitchellux5fdeweyux5f2009}{2009}), (Chan and
-  Hodges \protect\hyperlink{ref-chanux5flibraryux5f2009}{2009}),
-  (Anderson and Pérez-Carballo
-  \protect\hyperlink{ref-andersonux5flibraryux5f2009}{2009}), (Beghtol
-  \protect\hyperlink{ref-beghtolux5fclassificationux5f2009}{2009}).
-\item
-  Required: (Lee
-  \protect\hyperlink{ref-leeux5findigenousux5f2011}{2011}), (Higgins
-  \protect\hyperlink{ref-higginsux5flibraryux5f2012}{2012}), (Fister
-  \protect\hyperlink{ref-fisterux5fdeweyux5f2009}{2009}), (Buckland
-  \protect\hyperlink{ref-bucklandux5fobsolescenceux5f2012}{2012}),
-  (Brown-Sica and Beall
-  \protect\hyperlink{ref-brown-sicaux5flibraryux5f2008}{2008}).
+  \href{https://www.zotero.org/groups/lis501/items/collectionKey/7TJ9WWEE}{Background
+  readings on research methods}
 \end{itemize}
 
 \section*{Readings}\label{readings}
@@ -812,6 +972,11 @@ Service, Summon, Google Scholar, and Conventional Library Resources.''
 \emph{College \& Research Libraries} 74 (5): 464--88.
 doi:\href{https://doi.org/10.5860/crl-374}{10.5860/crl-374}.
 
+\hypertarget{ref-aufderheideux5fdoesux5f2016}{}
+Aufderheide, Patricia. 2016. ```Does This Have to Go Through the IRB?'''
+\emph{The Chronicle of Higher Education}, August.
+\url{http://chronicle.com/article/Does-This-Have-to-Go/237476/}.
+
 \hypertarget{ref-bartonux5foldux5f2012}{}
 Barton, Joshua, and Lucas Mak. 2012. ``Old Hopes, New Possibilities:
 Next-Generation Catalogues and the Centralization of Access.''
@@ -828,6 +993,12 @@ doi:\href{https://doi.org/10.1002/(SICI)1097-4571(1999)50:12\%3C1043::AID-ASI1\%
 ---------. 2007. ``What Is Browsing---really? A Model Drawing from
 Behavioural Science Research.'' \emph{Information Research} 12 (4).
 \url{http://www.informationr.net/ir/12-4/paper330.html}.
+
+\hypertarget{ref-batesux5finformationux5f2009}{}
+---------. 2009. ``Information Behavior.'' In \emph{Encyclopedia of
+Library and Information Sciences, Third Edition}, null:2381--91. null.
+Taylor \& Francis.
+\url{http://www.tandfonline.com/doi/full/10.1081/E-ELIS3-120043263}.
 
 \hypertarget{ref-bawdenux5fencounteringux5f2011}{}
 Bawden, David. 2011. ``Encountering on the Road to Serendip? Browsing in
@@ -857,12 +1028,6 @@ Blair, Ann. 2003. ``Reading Strategies for Coping With Information
 Overload ca.1550-1700.'' \emph{Journal of the History of Ideas} 64 (1):
 11--28.
 doi:\href{https://doi.org/10.1353/jhi.2003.0014}{10.1353/jhi.2003.0014}.
-
-\hypertarget{ref-brettux5fsuttonux5fqualitativeux5f2009}{}
-Brett Sutton. 2009. ``Qualitative Research Methods in Library and
-Information Science {[}ELIS Classic{]}.'' In \emph{Encyclopedia of
-Library and Information Sciences, Third Edition}, null:4380--93. null.
-Taylor \& Francis. \url{http://dx.doi.org/10.1081/E-ELIS3-120044785}.
 
 \hypertarget{ref-brown-sicaux5flibraryux5f2008}{}
 Brown-Sica, Margaret, and Jeffrey Beall. 2008. ``Library 2.0 and the
@@ -897,11 +1062,16 @@ Ranganathan: Shifting User Behaviors, Shifting Priorities}. Dublin, OH:
 OCLC Research.
 \url{http://www.oclc.org/content/dam/research/publications/library/2014/oclcresearch-reordering-ranganathan-2014.pdf}.
 
+\hypertarget{ref-connawayux5fbasicux5f2010}{}
+Connaway, Lynn Silipigni, and Ronald R. Powell. 2010a. \emph{Basic
+Research Methods for Librarians}. Vol. 5th ed. Library and Information
+Science Text Series. Santa Barbara, Calif: ABC-CLIO.
+\url{http://search.ebscohost.com/login.aspx?direct=true\&db=nlebk\&AN=348676\&site=ehost-live}.
+
 \hypertarget{ref-connawayux5fselectingux5f2010}{}
-Connaway, Lynn Silipigni, and Ronald R. Powell. 2010. ``Selecting the
-Research Method.'' In \emph{Basic Research Methods for Librarians},
-71--106. Library and Information Science Text Series. Santa Barbara,
-Calif: Libraries Unlimited.
+---------. 2010b. ``Selecting the Research Method.'' In \emph{Basic
+Research Methods for Librarians}, 71--106. Library and Information
+Science Text Series. Santa Barbara, Calif: Libraries Unlimited.
 \url{http://search.ebscohost.com/login.aspx?direct=true\&db=nlebk\&AN=348676\&site=ehost-live}.
 
 \hypertarget{ref-connawayux5fifux5f2011}{}
@@ -916,11 +1086,6 @@ Coombs, James H., Allen H. Renear, and Steven J. DeRose. 1987. ``Markup
 Systems and the Future of Scholarly Text Processing.'' \emph{Commun.
 ACM} 30 (11): 933--47.
 doi:\href{https://doi.org/10.1145/32206.32209}{10.1145/32206.32209}.
-
-\hypertarget{ref-davidux5fjohnsonux5fhealth-relatedux5f2014}{}
-David Johnson, J. 2014. ``Health-Related Information Seeking: Is It
-Worth It?'' \emph{Information Processing \& Management} 50 (5): 708--17.
-doi:\href{https://doi.org/10.1016/j.ipm.2014.06.001}{10.1016/j.ipm.2014.06.001}.
 
 \hypertarget{ref-deroseux5fwhatux5f2014}{}
 DeRose, Steven J. 2014. ``What Do We Still Lack? Or: Prolegomena to Any
@@ -965,6 +1130,13 @@ Home: Implications for Designers, Researchers, Educators, and Parents.''
 \emph{Journal of the American Society for Information Science and
 Technology} 63 (3): 558--73.
 doi:\href{https://doi.org/10.1002/asi.21700}{10.1002/asi.21700}.
+
+\hypertarget{ref-fuhrux5fevaluationux5f2007}{}
+Fuhr, Norbert, Giannis Tsakonas, Trond Aalberg, Maristella Agosti,
+Preben Hansen, Sarantos Kapidakis, Claus-Peter Klas, et al. 2007.
+``Evaluation of Digital Libraries.'' \emph{International Journal on
+Digital Libraries} 8 (1): 21--38.
+doi:\href{https://doi.org/10.1007/s00799-007-0011-z}{10.1007/s00799-007-0011-z}.
 
 \hypertarget{ref-glushkoux5factivitiesux5f2015}{}
 Glushko, Robert J. 2015a. ``Activities in Organizing Systems.'' In
@@ -1030,6 +1202,11 @@ Hyder, Eileen Mary. 2014. ``Reading Groups and Social Justice.'' In
 Blind and Partially Sighted People}, 49--63. Farnham, Surrey, England :
 Burlington, VT: Ashgate Publishing, Ltd.
 
+\hypertarget{ref-johnsonux5fhealth-relatedux5f2014}{}
+Johnson, J. David. 2014. ``Health-Related Information Seeking: Is It
+Worth It?'' \emph{Information Processing \& Management} 50 (5): 708--17.
+doi:\href{https://doi.org/10.1016/j.ipm.2014.06.001}{10.1016/j.ipm.2014.06.001}.
+
 \hypertarget{ref-junusux5fdigitalux5f2014}{}
 Junus, Ranti. 2014. ``Digital Collections and Accessibility.'' MSU
 Libraries Blogs. \emph{Digital Scholarship Collaborative Sandbox}.
@@ -1049,7 +1226,6 @@ Bilingual Database.'' \emph{Cataloging \& Classification Quarterly} 51
 \hypertarget{ref-lavoieux5fmakingux5f2006}{}
 Lavoie, Brian, Lorcan Dempsey, and Lynn Silipigni Connaway. 2006.
 ``Making Data Work Harder.'' \emph{Library Journal} 131 (1): 40--42.
-\url{http://search.ebscohost.com/login.aspx?direct=true\&db=a9h\&AN=19426604\&site=ehost-live}.
 
 \hypertarget{ref-leeux5findigenousux5f2011}{}
 Lee, Deborah. 2011. ``Indigenous Knowledge Organization: A Study of
@@ -1061,18 +1237,12 @@ Practice and Research} 6 (1).
 \hypertarget{ref-levieux5fmanux5f2004}{}
 Levie, Françoise., and Sofidoc Productions. 2004. ``The Man Who Wanted
 to Classify the World.''
-\url{http://www.aspresolver.com/aspresolver.asp?VASC;1641522}.
 
 \hypertarget{ref-lewisux5fstacksux5f2013}{}
 Lewis, D. W. 2013. ``From Stacks to the Web: The Transformation of
 Academic Library Collecting.'' \emph{College \& Research Libraries} 14
 (2): 159--76.
 doi:\href{https://doi.org/10.5860/crl-309}{10.5860/crl-309}.
-
-\hypertarget{ref-marciaux5fj.ux5fbatesux5finformationux5f2009}{}
-Marcia J. Bates. 2009. ``Information.'' In \emph{Encyclopedia of Library
-and Information Sciences, Third Edition}, null:2347--60. null. Taylor \&
-Francis. \url{http://dx.doi.org/10.1081/E-ELIS3-120045519}.
 
 \hypertarget{ref-maxwellux5fbibliographicux5f2010}{}
 Maxwell, R.L. 2010. ``Bibliographic Control. 497-505.''
@@ -1095,6 +1265,12 @@ Naumer, Charles M., and Karen E. Fisher. 2009. ``Information Needs.'' In
 \emph{Encyclopedia of Library and Information Sciences, Third Edition},
 null:2452--8. null. Taylor \& Francis.
 \url{http://www.tandfonline.com/doi/abs/10.1081/E-ELIS3-120043243}.
+
+\hypertarget{ref-niteckiux5fchangingux5f1996}{}
+Nitecki, Danuta A. 1996. ``Changing the Concept and Measure of Service
+Quality in Academic Libraries.'' \emph{The Journal of Academic
+Librarianship} 22 (3): 181--90.
+doi:\href{https://doi.org/10.1016/S0099-1333(96)90056-7}{10.1016/S0099-1333(96)90056-7}.
 
 \hypertarget{ref-olsonux5fpowerux5f2001}{}
 Olson, Hope A. 2001. ``The Power to Name: Representation in Library
@@ -1125,6 +1301,12 @@ and Arrangement for Multicultural Archival Collections.''
 \emph{Archivaria} 63: 87.
 \url{http://rameshsrinivasan.org/wordpress/wp-content/uploads/2010/03/8-Final-ShiltonSrinivasan-Archivaria.pdf}.
 
+\hypertarget{ref-suttonux5fqualitativeux5f2009}{}
+Sutton, Brett. 2009. ``Qualitative Research Methods in Library and
+Information Science {[}ELIS Classic{]}.'' In \emph{Encyclopedia of
+Library and Information Sciences, Third Edition}, null:4380--93. null.
+Taylor \& Francis. \url{http://dx.doi.org/10.1081/E-ELIS3-120044785}.
+
 \hypertarget{ref-swogerux5fwhatux5f2012}{}
 Swoger, B. 2012. ``What Is Metadata? A Christmas-Themed Exploration.
 Info Culture.'' \emph{Scientific American}.
@@ -1154,6 +1336,11 @@ Gonzalo, and Michael Kluck, 2406:355--70. Lecture Notes in Computer
 Science. Springer Berlin Heidelberg.
 \url{http://dx.doi.org/10.1007/3-540-45691-0_34}.
 
+\hypertarget{ref-wallimanux5fdefiningux5f2006}{}
+Walliman, Nicholas. 2006. ``Defining the Research Problem.'' In
+\emph{Social Research Methods}, 67--74. London: SAGE Publications, Ltd.
+\url{http://methods.sagepub.com/book/social-research-methods}.
+
 \hypertarget{ref-warrenux5f2015ux5f2015}{}
 Warren, John. 2015. ``(2015) Zen and the Art of Metadata Maintenance.''
 \emph{Journal of Electronic Publishing} 18 (3).
@@ -1171,12 +1358,12 @@ Wilson, Tom. 2008. ``The Information User: Past, Present and Future.''
 doi:\href{https://doi.org/10.1177/0165551508091309}{10.1177/0165551508091309}.
 
 \hypertarget{ref-wrightux5fcatalogingux5f2014}{}
-Wright, Alex. 2014a. \emph{Cataloging the World : Paul Otlet and the
+Wright, Alex. 2014a. \emph{Cataloging the World: Paul Otlet and the
 Birth of the Information Age}. Oxford: Oxford University Press.
-\url{http://vufind.carli.illinois.edu/vf-uiu/Record/uiu_7507894}.
 
 \hypertarget{ref-wrightux5fsecretux5f2014}{}
----------. 2014b. ``The Secret History of Hypertext --- The Atlantic.''
+---------. 2014b. ``The Secret History of Hypertext --- The Atlantic,''
+May.
 \url{http://www.theatlantic.com/technology/archive/2014/05/in-search-of-the-proto-memex/371385/}.
 
 \end{document}
