--- a/bib/GeneralBackground.bib
+++ b/bib/GeneralBackground.bib
@@ -1,10 +1,10 @@
 
-@misc{asis&t_board_asis&t_2001,
-	title = {{ASIS}\&{T} {Educational} {Guidelines}},
+@misc{asist_board_asist_2001,
+	title = {{ASIST} {Educational} {Guidelines}},
 	url = {http://www.asis.org/Board/educational_guidelines.html},
 	language = {English},
 	journal = {Association for Information Science and Technology},
-	author = {{ASIS\&T Board}},
+	author = {{ASIST Board}},
 	month = nov,
 	year = {2001}
 }
