--- a/bib/LIS501.md
+++ b/bib/LIS501.md
@@ -48,7 +48,7 @@ Libraries* 74, no. 5 (2013): 464–88. doi:10.5860/crl-374.
 
 <div class="csl-entry">
 
-ASIS&T Board. “ASIS&T Educational Guidelines.” *Association for
+ASIST Board. “ASIST Educational Guidelines.” *Association for
 Information Science and Technology*, November 8, 2001.
 http://www.asis.org/Board/educational\_guidelines.html.
 
